--- a/src/app/components/login-register-page/login-register-page.component.html
+++ b/src/app/components/login-register-page/login-register-page.component.html
@@ -3,7 +3,7 @@
     <mat-card class="mobile-full-height w-[100%] h-auto lg:w-[25%] lg:h-auto xl:w-[30%] xl:h-auto 2xl:w-[25%] 2xl:h-auto bg-white flex flex-col items-center justify-center overflow-visible min-h-[500px] py-4">
       <div class="login-content flex flex-col items-center justify-center w-full">
         <div class="logo-container flex justify-center mt-2 mb-2">
-          <img src="assets/hookspot-logo.png" alt="Hookspot Logo" class="w-[60%]">
+          <img src="assets/logo-images/hookspot-logo.png" alt="Hookspot Logo" class="w-[60%]">
         </div>
         <mat-tab-group dynamicHeight class="w-[80%]">
           <mat-tab class="text-lg" label="Logga in"
