--- a/src/app/components/user/notifications/notifications.component.html
+++ b/src/app/components/user/notifications/notifications.component.html
@@ -34,11 +34,11 @@
     
             <div class="action-buttons">
                 <div class="action-item-accept cursor-pointer" (click)="onAcceptInvite(invite)">
-                    <img src="assets/accept.svg" alt="Accept" class="h-[3rem]">
+                    <img src="assets/app-images/accept.svg" alt="Accept" class="h-[3rem]">
                     <p class="text-xs text-gray-400 text-label mt-[1px]">Accept</p>
                 </div>
                 <div class="action-item cursor-pointer" (click)="onDeclineInvite(invite)">
-                    <img src="assets/cross-circle.svg" alt="Decline" class="decline-icon h-[3.1rem]">
+                    <img src="assets/app-images/cross-circle.svg" alt="Decline" class="decline-icon h-[3.1rem]">
                     <p class="text-xs text-gray-400 text-label">Decline</p>
                 </div>
             </div>
