--- a/src/app/components/add-catch/add-catch.component.html
+++ b/src/app/components/add-catch/add-catch.component.html
@@ -8,7 +8,7 @@
 
   <div class="w-full px-6 pt-6 pb-5 border-b border-gray-100 flex flex-col items-center gap-2">
     <div class="relative">
-      <img src="assets/perch-fish.svg" alt="Perch" class="h-20 w-20 opacity-90">
+      <img src="assets/app-images/perch-fish.svg" alt="Perch" class="h-20 w-20 opacity-90">
     </div>
     <h2 class="text-2xl font-medium text-gray-800">Add catch</h2>
   </div>
