refactor: improve code quality, add error handling, improved documentation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
       <span class="text-xs mt-[2px]" [ngClass]="{ 'font-medium': rla.isActive }">Map</span>
     </div>
 
-    <div class="flex-1 flex flex-col items-center relative -mt-6 z-10" (click)="openFishRegisterDialog()">
+    <div class="flex-1 flex flex-col items-center relative -mt-6 z-10" style="cursor: pointer;" (click)="openFishRegisterDialog()">
       <div class="rounded-full border border-primary p-[6px] bg-primary">
         <fa-icon [icon]="addCatchIcon" class="text-white text-4xl"></fa-icon>
       </div>
